After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 598274 - dtsdec leaks input buffers
dtsdec leaks input buffers
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal blocker
: 0.10.15
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2009-10-13 13:30 UTC by Jan Schmidt
Modified: 2009-10-13 14:14 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
dtsdec: Fix reference leak on all input buffers in 'dvd mode' (1.25 KB, patch)
2009-10-13 13:30 UTC, Jan Schmidt
committed Details | Review

Description Jan Schmidt 2009-10-13 13:30:22 UTC
In DVD mode, dtsdec leaks all input buffers
Comment 1 Jan Schmidt 2009-10-13 13:30:53 UTC
Created attachment 145352 [details] [review]
dtsdec: Fix reference leak on all input buffers in 'dvd mode'
Comment 2 Sebastian Dröge (slomo) 2009-10-13 13:59:03 UTC
Review of attachment 145352 [details] [review]:

And this one is correct too... I wonder why *I* didn't notice this leak when basing the dtsdec-dvdmode code on the a52dec code :)
Comment 3 Jan Schmidt 2009-10-13 14:13:22 UTC
commit 61eebb8cb5b5c5a44b895fa808f7a1703d592bdd
Author: Jan Schmidt <thaytan@noraisin.net>
Date:   Tue Oct 13 13:04:47 2009 +0100

    dtsdec: Fix reference leak on all input buffers in 'dvd mode'
    
    https://bugzilla.gnome.org/show_bug.cgi?id=598274