dtsdec: Fix reference leak on all input buffers in 'dvd mode'

https://bugzilla.gnome.org/show_bug.cgi?id=598274